<resources>
    <string name="app_name">PS5 Launcher</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="avatar">Avatar</string>
    <string name="username">XxPoggersxX</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="achievements">Achievements</string>
</resources>